--- a/Model.ipynb
+++ b/Model.ipynb
@@ -737,7 +737,7 @@
     "    \n",
     "    print(f\"Image {i+1}: Ground Truth Label: {label}, Predicted Probabilities: {prediction}\")\n",
     "    # Print or visualize the image using imshow from matplotlib.pyplot\n",
-    "    plt.imshow(image.squeeze(), cmap='gray')  # Corrected usage of imshow\n",
+    "    plt.imshow(image.squeeze(), cmap='gray') \n",
     "    plt.show()"
    ]
   },
@@ -852,9 +852,6 @@
     }
    ],
    "source": [
-    "import random\n",
-    "import matplotlib.pyplot as plt  # Corrected import statement\n",
-    "\n",
     "# Instantiate the PPNet model\n",
     "model = construct_PPNet(base_architecture='resnet18', num_classes=5)  # Adjust num_classes as needed\n",
     "\n",
@@ -870,7 +867,7 @@
     "    epoch_labels = []\n",
     "    epoch_images = []\n",
     "    \n",
-    "    for images, labels in train_loader:  # Use breastmnist train loader\n",
+    "    for images, labels in train_loader:\n",
     "        optimizer.zero_grad()\n",
     "        outputs, _ = model(images)\n",
     "        \n",
@@ -895,10 +892,7 @@
     "    epoch_labels = np.concatenate(epoch_labels)\n",
     "    epoch_accuracy = (epoch_predictions.argmax(axis=1) == epoch_labels).mean()\n",
     "    \n",
-    "    print(f\"Epoch {epoch+1}, Loss: {running_loss / len(train_loader)}, ACC: {epoch_accuracy}\")\n",
-    "\n",
-    "# Evaluation loop (if needed)\n",
-    "model.eval()\n"
+    "    print(f\"Epoch {epoch+1}, Loss: {running_loss / len(train_loader)}, ACC: {epoch_accuracy}\")"
    ]
   }
  ],
