--- a/Model.ipynb
+++ b/Model.ipynb
@@ -537,10 +537,7 @@
     "        epoch_labels = np.concatenate(epoch_labels)\n",
     "        epoch_accuracy = (epoch_predictions.argmax(axis=1) == epoch_labels).mean()\n",
     "        \n",
-    "        print(f\"Size: {size}, Epoch {epoch+1}, Loss: {running_loss / len(train_loaders[size])}, ACC: {epoch_accuracy}\")\n",
-    "\n",
-    "# Evaluation loop (if needed)\n",
-    "model.eval()"
+    "        print(f\"Size: {size}, Epoch {epoch+1}, Loss: {running_loss / len(train_loaders[size])}, ACC: {epoch_accuracy}\")"
    ]
   },
   {
@@ -631,7 +628,7 @@
     "        \n",
     "        print(f\"Size: {size}, Correctly Predicted Image: Ground Truth Label: {correct_label}, Predicted Label: {correct_prediction}\")\n",
     "        plt.imshow(correct_image, cmap='gray')\n",
-    "        plt.show()\n"
+    "        plt.show()"
    ]
   },
   {
@@ -876,7 +873,7 @@
     "        one_hot_labels = torch.zeros(batch_size, n_classes, dtype=torch.float32)\n",
     "        for i in range(batch_size):\n",
     "            one_hot_labels[i][labels[i]] = 1\n",
-    "        \n",
+    "            \n",
     "        loss = criterion(outputs, one_hot_labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
